# AiBook

./: .gitignore  agent.py  api.py  main.py  pyproject.toml  vercel.json
.specify/memory/: constitution.md
backend/: retrieve.py
book/: docusaurus.config.js  package-lock.json  package.json  vercel.json
book/docs/module-02-digital-twin/: _category_.json  chapter-01-gazebo-physics.mdx  index.md
book/docs/module-03-ai-robot-brain/: _category_.json  chapter-01-perception.mdx  chapter-02-isaac-sim.mdx  chapter-03-isaac-ros.mdx  index.md
book/docs/module-04-vla/: _category_.json  chapter-01-vla-revolution.mdx  index.md
book/src/theme/: Root.tsx
examples/gazebo/config/: ros_gz_bridge.yaml
examples/gazebo/launch/: digital_twin.launch.py
examples/gazebo/scripts/: spawn-robot.bash
examples/gazebo/worlds/: collision-demo.sdf  humanoid-world.sdf  minimal-world.sdf  physics-config.sdf  world-with-objects.sdf
examples/isaac/synthetic_data/: create_scene.py  domain_randomizer.py  export_dataset.py  generate_rgb_depth.py  verify_install.py
examples/ros2_ws/src/digital_twin_examples/: package.xml  setup.py
examples/ros2_ws/src/digital_twin_examples/digital_twin_examples/: __init__.py
examples/ros2_ws/src/digital_twin_examples/launch/: ros_tcp_endpoint.launch.py
examples/ros2_ws/src/isaac_perception/: package.xml  setup.py
examples/ros2_ws/src/isaac_perception/isaac_perception/: __init__.py
examples/ros2_ws/src/isaac_perception/resource/: isaac_perception
examples/vla/capstone/: requirements.txt
examples/vla/llm_planning/: requirements.txt
examples/vla/whisper/: requirements.txt
history/prompts/001-ros2-fundamentals/: 001-ros2-module-spec-creation.spec.prompt.md  002-implementation-plan-creation.plan.prompt.md  (+1 more)
specs/001-ros2-fundamentals/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-digital-twin-simulation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-nvidia-isaac/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-vision-language-action/: plan.md  spec.md  tasks.md
specs/005-embedding-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-retrieval-pipeline-testing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-rag-retrieval-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-rag-chatbot-frontend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+70 files in other folders)
