[project]
name = "embedding-pipeline"
version = "0.1.0"
description = "RAG embedding pipeline for Docusaurus documentation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cohere>=5.0.0",
    "qdrant-client>=1.7.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
